--- a/app/src/main/res/layout/custom_chapter_view.xml
+++ b/app/src/main/res/layout/custom_chapter_view.xml
@@ -11,7 +11,7 @@
         android:padding="@dimen/padding_medium"
         android:text="Chapter"
         android:textSize="@dimen/text_size_semi_large"
-        app:layout_constraintBottom_toTopOf="@id/iv_video"
+        app:layout_constraintBottom_toTopOf="@id/cl_video"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -42,15 +42,48 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/tv_chapter" />
 
-    <VideoView
-        android:id="@+id/iv_video"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_video"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@id/et_title"
         app:layout_constraintDimensionRatio="16:9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_chapter" />
+        app:layout_constraintTop_toBottomOf="@id/tv_chapter">
+
+        <androidx.media3.ui.PlayerView
+            android:id="@+id/pv_video"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:id="@+id/grayView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/gray_10"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_add_video"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/click_video_info"
+            android:textSize="@dimen/text_medium"
+            app:drawableTopCompat="@drawable/video"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <EditText
         android:id="@+id/et_title"
@@ -64,7 +97,7 @@
         app:layout_constraintBottom_toTopOf="@id/divider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_video" />
+        app:layout_constraintTop_toBottomOf="@+id/cl_video" />
 
     <View
         android:id="@+id/divider"
