--- a/app/src/main/res/layout/list_item_notice.xml
+++ b/app/src/main/res/layout/list_item_notice.xml
@@ -5,14 +5,14 @@
     android:id="@+id/cv_notice"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginHorizontal="@dimen/padding_small"
+    android:layout_marginVertical="@dimen/padding_small"
+    app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="20dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    android:layout_marginHorizontal="@dimen/padding_small"
-    app:cardBackgroundColor="@color/white"
-    android:layout_marginTop="@dimen/padding_medium">
+    app:layout_constraintTop_toTopOf="parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -58,12 +58,12 @@
 
         <TextView
             android:id="@+id/tv_deleteBtn"
+            style="@style/BoldSmallText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             android:padding="@dimen/padding_medium"
             android:text="@string/delete"
-            style="@style/BoldSmallText"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -82,13 +82,12 @@
             android:id="@+id/ivNotice"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:src="@drawable/sample"
             android:layout_marginTop="@dimen/padding_medium"
-            android:scaleType="fitCenter"
             android:adjustViewBounds="true"
-            app:layout_constraintStart_toStartOf="parent"
+            android:scaleType="fitCenter"
+            android:src="@drawable/sample"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_content"
-            />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_content" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
