S11P12D210-82 feat: 화상강의 CRUD 일부 구현 및 캘린더&타임피커

--- a/app/src/main/res/layout/fragment_management_live.xml
+++ b/app/src/main/res/layout/fragment_management_live.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.homeUI.myPage.likeTeacher.managementLive.ManagementLiveFragment">
+    tools:context=".ui.homeUI.myPage.managementLive.ManagementLiveFragment">
 
     <TextView
         android:id="@+id/tv_proceeding_live"
