--- a/app/src/main/res/layout/fragment_register_live.xml
+++ b/app/src/main/res/layout/fragment_register_live.xml
@@ -156,10 +156,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/padding_extra_extra_large"
-            app:helperText="MM/DD/YYYY"
+            app:helperText="YYYY.MM.DD"
             app:layout_constraintBottom_toTopOf="@id/til_end"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            android:clickable="true"
             app:layout_constraintTop_toBottomOf="@id/tv_choose_date">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -167,9 +168,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableEnd="@drawable/calendar"
-                android:enabled="false"
-                android:hint="@string/start"
-                android:inputType="text"
+                android:focusable="false"
+                android:hint="@string/start_date"
+                android:inputType="none"
                 android:lines="1"
                 tools:ignore="RtlSymmetry" />
 
@@ -181,7 +182,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/padding_extra_extra_large"
             android:layout_marginTop="@dimen/padding_medium"
-            app:helperText="MM/DD/YYYY"
+            app:helperText="YYYY.MM.DD"
             app:layout_constraintBottom_toTopOf="@id/tv_time"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -192,8 +193,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableEnd="@drawable/calendar"
-                android:enabled="false"
-                android:hint="@string/end"
+                android:focusable="false"
+                android:hint="@string/end_date"
                 android:inputType="text"
                 android:lines="1"
                 tools:ignore="RtlSymmetry" />
@@ -245,6 +246,7 @@
             android:text="@string/init_time"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/btn_start"
             app:layout_constraintStart_toEndOf="@id/tv_tilde"
             app:layout_constraintTop_toTopOf="@id/btn_start" />
 
