--- a/app/src/main/res/layout/fragment_register_video.xml
+++ b/app/src/main/res/layout/fragment_register_video.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     tools:context=".ui.homeUI.myPage.registerVideo.RegisterVideoFragment">
 
     <androidx.core.widget.NestedScrollView
@@ -25,12 +27,10 @@
             <ImageView
                 android:id="@+id/iv_video"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
-                android:scaleType="centerCrop"
                 android:src="@drawable/gray"
                 app:layout_constraintBottom_toTopOf="@id/et_title"
-                app:layout_constraintDimensionRatio="4:3"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
