--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,14 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".ui.homeUI.myPage.profile.ProfileFragment">
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_icon"
         android:layout_width="@dimen/icon_large"
         android:layout_height="@dimen/icon_large"
+        android:layout_marginTop="@dimen/padding_large"
+        android:background="@drawable/user"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/ic_launcher_background" />
+        app:shapeAppearanceOverlay="@style/Circle" />
 
     <TextView
         android:id="@+id/tv_name"
