S11P12D210-82 feat: 캘린더 뷰 모서리 둥글게

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -92,6 +92,7 @@
     <!-- 캘린더 DatePicker 색상 변경 -->
     <style name="MySpinnerDatePickerStyle" parent="Theme.AppCompat.Light.Dialog">
         <item name="colorAccent">@color/primary</item>
+        <item name="android:windowBackground">@drawable/rounded_dialog_background</item>
         <item name="android:buttonBarPositiveButtonStyle">@style/DialogButtonStyled</item>
         <item name="android:buttonBarNegativeButtonStyle">@style/DialogButtonStyled</item>
     </style>
