S11P12D210-82 feat: 화상강의 업데이트 및 등록 완성

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -251,5 +251,8 @@
             android:name="liveId"
             android:defaultValue="-1"
             app:argType="integer" />
+        <argument
+            android:name="state"
+            app:argType="string" />
     </fragment>
 </navigation>
