S11P12D210-134 Fix: 녹화 강의 변경에 대한 에러 수정, UI 화면 center crop으로 변경

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -15,7 +15,8 @@
             android:layout_width="@dimen/icon_large"
             android:layout_height="@dimen/icon_large"
             android:layout_marginTop="@dimen/padding_large"
-            android:background="@drawable/user"
+            android:src="@drawable/user"
+            android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
