--- a/app/src/main/res/layout/fragment_register_notice.xml
+++ b/app/src/main/res/layout/fragment_register_notice.xml
@@ -22,7 +22,7 @@
                 android:gravity="top"
                 android:hint="@string/write_info"
                 android:inputType="textMultiLine"
-                android:minHeight="400dp"
+                android:minHeight="200dp"
                 android:padding="@dimen/padding_large"
                 android:scrollHorizontally="false"
                 android:textSize="@dimen/text_medium_large20"
@@ -51,7 +51,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/divider5"
-                tools:src="@drawable/sample2" /> <!-- 가로 세로 비율 1:1 설정 -->
+                tools:src="@drawable/sample2" />
 
             <ImageView
                 android:id="@+id/iv_cancel"
